--- a/docs/package.json
+++ b/docs/package.json
@@ -15,19 +15,20 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.16",
     "@superfluid-finance/tokenlist": "^3.3.2",
-    "@superfluid-finance/widget": "^0.4.7",
+    "@superfluid-finance/widget": "workspace:*",
+    "@web3modal/ethereum": "^2.7.1",
     "@web3modal/react": "^2.7.1",
-    "@web3modal/wagmi": "^3.2.0",
     "next": "^13.5.6",
-    "nextra": "latest",
-    "nextra-theme-docs": "latest",
+    "nextra": "^2.13.2",
+    "nextra-theme-docs": "^2.13.2",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-admonitions": "^1.2.1",
     "typedoc-nextra": "^0.1.6",
-    "viem": "^1.18.3",
-    "wagmi": "^1.4.5"
+    "viem": "^1.17.1",
+    "wagmi": "^1.4.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.8.8",
