update web3modal to v3 (WIP)

--- a/apps/hosted-widget/package.json
+++ b/apps/hosted-widget/package.json
@@ -20,8 +20,7 @@
     "@segment/analytics-next": "^1.63.0",
     "@sentry/nextjs": "^7.94.1",
     "@superfluid-finance/widget": "workspace:*",
-    "@web3modal/ethereum": "^2.7.1",
-    "@web3modal/react": "^2.7.1",
+    "@web3modal/wagmi": "^3.5.7",
     "clsx": "^2.1.0",
     "next": "13.4.19",
     "react": "^18.2.0",
