--- a/docs/package.json
+++ b/docs/package.json
@@ -16,8 +16,7 @@
     "@mui/material": "^5.15.5",
     "@superfluid-finance/tokenlist": "^3.3.2",
     "@superfluid-finance/widget": "workspace:*",
-    "@web3modal/ethereum": "^2.7.1",
-    "@web3modal/react": "^2.7.1",
+    "@web3modal/wagmi": "^3.5.7",
     "next": "^13.5.6",
     "nextra": "^2.13.2",
     "nextra-theme-docs": "^2.13.2",
