--- a/examples/b2b-service-demo/package.json
+++ b/examples/b2b-service-demo/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "@sentry/nextjs": "^7.94.1",
     "@superfluid-finance/widget": "workspace:*",
-    "@web3modal/ethereum": "^2.7.1",
-    "@web3modal/react": "^2.7.1",
+    "@web3modal/wagmi": "^3.5.7",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
