--- a/examples/widget-vite-react-web3modal/package.json
+++ b/examples/widget-vite-react-web3modal/package.json
@@ -12,8 +12,7 @@
   },
   "dependencies": {
     "@superfluid-finance/widget": "workspace:*",
-    "@web3modal/ethereum": "^2.7.1",
-    "@web3modal/react": "^2.7.1",
+    "@web3modal/wagmi": "^3.5.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "viem": "^1.21.4",
