--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -86,6 +86,8 @@
     "react-error-boundary": "^4.0.12",
     "react-hook-form": "~7.47.0",
     "use-immer": "^0.9.0",
+    "viem": "^1.21.4",
+    "wagmi": "^1.4.13",
     "zod": "^3.22.4",
     "zod-validation-error": "^1.4.0"
   },
@@ -104,12 +106,6 @@
     "tsconfig": "workspace:*",
     "typedoc": "^0.25.7",
     "typescript": "^5.3.3",
-    "viem": "^1.21.4",
-    "vitest": "^0.34.6",
-    "wagmi": "^1.4.13"
-  },
-  "peerDependencies": {
-    "viem": ">=1",
-    "wagmi": ">=1"
+    "vitest": "^0.34.6"
   }
 }
