fix: specify viem and wagmi peer dependency version ranges correctly

--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -109,7 +109,7 @@
     "wagmi": "^1.4.13"
   },
   "peerDependencies": {
-    "viem": ">=1",
-    "wagmi": ">=1"
+    "viem": "^1",
+    "wagmi": "^1"
   }
 }
