Get spec files with a shell script

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,6 +10,23 @@ on:
         required: true
 
 jobs:
+  test-setup:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: tests
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Generate matrix
+        id: set-matrix
+        run: |
+          MATRIX=$(bash helpers/listSpecFiles.sh)
+          echo "matrix=$MATRIX" >> $GITHUB_OUTPUT 
+
   test:
     if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success' && github.event.deployment_status.environment == 'Preview – widget-builder' || github.event_name == 'workflow_dispatch '
     timeout-minutes: 60
@@ -20,7 +37,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        file: [builderCommon, builderExportTab, builderGatingTab, builderJSONEditor, builderProductsTab, builderStylingTab,builderPaymentTab, widgetConfigurationTests, widgetMetamaskStreamTransactions,widgetMetamaskTokenTransactions, widgetMetamaskUITests, widgetMetamaskValidationErrors , widgetNoWallet]
+        file: ${{ fromJson(needs.test-setup.outputs.matrix) }}
 
     steps:
       - uses: actions/checkout@v3
@@ -56,7 +73,7 @@ jobs:
 
         # https://playwright.dev/docs/next/ci#running-headed
       - name: Run Playwright tests
-        run: xvfb-run pnpm playwright test ${{ matrix.file }}.spec.ts
+        run: xvfb-run pnpm playwright test ${{ matrix.file }}
         env:
           BASE_URL: ${{ env.BASE_URL }}
           WIDGET_WALLET_PUBLIC_KEY: "0x7c5de59A1b31e3D00279A825Cb95fAEDb09eA9FD"
