--- a/package.json
+++ b/package.json
@@ -27,22 +27,23 @@
     ]
   },
   "devDependencies": {
-    "@changesets/cli": "^2.27.1",
-    "eslint": "^8.56.0",
+    "@changesets/cli": "^2.27.9",
+    "eslint": "^8.57.1",
     "eslint-config-custom": "workspace:*",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
+    "eslint-plugin-unused-imports": "^3.2.0",
     "husky": "^8.0.3",
-    "lint-staged": "^15.2.1",
+    "lint-staged": "^15.2.10",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.2.4",
-    "turbo": "^1.12.2",
-    "typescript": "^5.3.3"
+    "prettier": "^3.3.3",
+    "turbo": "^1.13.4",
+    "typescript": "^5.6.2"
   },
   "packageManager": "pnpm@8.6.1",
   "pnpm": {
     "overrides": {
-      "eslint-plugin-react-hooks": "5.0.0-canary-41f0e9dae-20230907"
+      "eslint-plugin-react-hooks": "5.0.0-canary-41f0e9dae-20230907",
+      "@wagmi/core": "1"
     }
   }
 }
