--- a/apps/hosted-widget/package.json
+++ b/apps/hosted-widget/package.json
@@ -17,11 +17,12 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@reown/appkit": "^1.0.7",
+    "@reown/appkit-adapter-wagmi": "^1.0.7",
     "@segment/analytics-next": "^1.74.0",
     "@sentry/nextjs": "^7.119.0",
     "@superfluid-finance/widget": "workspace:*",
-    "@web3modal/ethereum": "^2.7.1",
-    "@web3modal/react": "^2.7.1",
+    "@tanstack/react-query": "^5.59.0",
     "clsx": "^2.1.1",
     "next": "13.4.19",
     "react": "^18.3.1",
