--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -74,6 +74,7 @@
     "@mui/utils": "^5.16.6",
     "@superfluid-finance/metadata": "^1.5.0",
     "@superfluid-finance/tokenlist": "^5.8.2",
+    "@tanstack/react-query": "^5.59.0",
     "abitype": "^0.10.3",
     "blockies-ts": "^1.0.0",
     "immer": "^10.1.1",
@@ -99,7 +100,7 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
-    "@wagmi/cli": "^1.5.2",
+    "@wagmi/cli": "^2.1.16",
     "jsdom": "^22.1.0",
     "tsconfig": "workspace:*",
     "typedoc": "^0.25.13",
