--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -107,7 +107,8 @@
     "typescript": "^5.6.2",
     "viem": "^2.21.18",
     "vitest": "^0.34.6",
-    "wagmi": "^2.12.17"
+    "wagmi": "^2.12.17",
+    "@wagmi/core": "^2.13.8"
   },
   "peerDependencies": {
     "viem": "^2",
