--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
   "pnpm": {
     "overrides": {
       "eslint-plugin-react-hooks": "5.0.0-canary-41f0e9dae-20230907",
-      "@wagmi/core": "1"
+      "@wagmi/core": "1",
+      "react-dom": "^18.3.1",
+      "react": "^18.3.1"
     }
   }
 }
