--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -54,6 +54,9 @@ jobs:
 
       - name: Install dependencies
         run: pnpm i
+      
+      - name: Install Playwright dependencies
+        run: pnpm playwright install-deps
 
       - name: Install Playwright browsers
         run: pnpm playwright install --with-deps
