--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,8 +44,6 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: pnpm/action-setup@v4
-        with:
-          version: 9.12.0
 
       - name: Setup Node.js 20.x
         uses: actions/setup-node@v4
@@ -54,12 +52,9 @@ jobs:
 
       - name: Install dependencies
         run: pnpm i
-      
-      - name: Install Playwright dependencies
-        run: pnpm playwright install-deps
-
+          
       - name: Install Playwright browsers
-        run: pnpm playwright install --with-deps
+        run: pnpm playwright install chromium --with-deps
 
       - name: Install virtual display
         run: |
