--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,10 +41,11 @@ jobs:
         file: ${{ fromJson(needs.test-setup.outputs.matrix) }}
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-      - name: Install bun
-        uses: oven-sh/setup-bun@v1
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
 
       - name: Setup Node.js 20.x
         uses: actions/setup-node@v4
@@ -52,11 +53,11 @@ jobs:
           node-version: 20.x
 
       - name: Install dependencies
-        run: bun i
-          
-      - name: Install Playwright browsers
-        run: bun playwright install chromium --with-deps
-
+        run: pnpm i --ignore-scripts
+        
+      - name: Setup Playwright
+        run: pnpm playwright install --with-deps
+        
       - name: Install virtual display
         run: |
           sudo apt-get install --no-install-recommends -y \
@@ -72,14 +73,14 @@ jobs:
           fi
 
       - name: Setup metamask cache
-        run: xvfb-run bun synpress wallet-setup --force
+        run: xvfb-run pnpm synpress wallet-setup --force
         env:
           WIDGET_WALLET_PRIVATE_KEY: ${{ secrets.WIDGET_WALLET_PRIVATE_KEY}}
           WIDGET_WALLET_PUBLIC_KEY: "0x7c5de59A1b31e3D00279A825Cb95fAEDb09eA9FD"
 
         # https://playwright.dev/docs/next/ci#running-headed
       - name: Run Playwright tests
-        run: xvfb-run bun playwright test ${{ matrix.file }}
+        run: xvfb-run pnpm playwright test ${{ matrix.file }}
         env:
           BASE_URL: ${{ env.BASE_URL }}
           WIDGET_WALLET_PUBLIC_KEY: "0x7c5de59A1b31e3D00279A825Cb95fAEDb09eA9FD"
