--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,6 +49,15 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
+        
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libasound2 \
+            libicu72 \
+            libffi8 \
+            libx264-164
 
       - name: Install dependencies
         run: pnpm i --ignore-scripts
