--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,22 +49,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
-        
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libasound2 \
-            libicu72 \
-            libffi8 \
-            libx264-164
 
       - name: Install dependencies
-        run: pnpm i --ignore-scripts
-        
-      - name: Setup Playwright
+        run: pnpm install --frozen-lockfile
+
+      - name: Install Playwright browsers
         run: pnpm playwright install --with-deps
-        
+
       - name: Install virtual display
         run: |
           sudo apt-get install --no-install-recommends -y \
