--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,7 +51,7 @@ jobs:
           node-version: 20.x
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm i
 
       - name: Install Playwright browsers
         run: pnpm exec playwright install
