--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,8 +44,6 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: pnpm/action-setup@v4
-        with:
-          version: 8
 
       - name: Setup Node.js 20.x
         uses: actions/setup-node@v4
@@ -56,7 +54,7 @@ jobs:
         run: pnpm i
 
       - name: Install Playwright browsers
-        run: pnpm playwright install --with-deps
+        run: pnpm exec playwright install
 
       - name: Install virtual display
         run: |
